--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
         <title></title>
     </head>
   
     <body>
-        
+        <div class="container">
+            
+        </div>
     </body>
 </html>
