--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div class="container">
             
         </div>
+        <!-- <button class="start-button">Start</button> -->
     </body>
 </html>
