Add button for inputting grid size

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
   
     <body>
+        <button class="size-button">Select grid size</button>
         <div class="container">
             
         </div>
