--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
   
     <body>
+        <h1>Etch-a-Sketch</h1>
         <button class="size-button">Select grid size</button>
         <div class="container">
             
