Fix bug: grid changes size when number of squares is changed & add styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
   
     <body>
         <h1>Etch-a-Sketch</h1>
-        <button class="size-button">Select grid size</button>
+        <h2>Draw whatever you want!</h2>
         <div class="container">
-            
+            <div class="settings">
+                <h3>Settings</h3>
+                <button class="size-button">Select grid size</button>
+                <button class="reset-button">Reset</button>
+                <div class="grid-size">16 &times; 16</div>
+            </div>
+            <div class="grid">
+                
+            </div>
         </div>
     </body>
 </html>
