--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <h3>Settings</h3>
                 <button class="size-button">Select grid size</button>
                 <button class="reset-button">Reset</button>
+                <button class="color-button">Color</button>
+                <button class="black-button">Black</button>
                 <div class="grid-size">16 &times; 16</div>
             </div>
             <div class="grid">
